# thetinytasks

./: .gitignore  CLAUDE.md  Dockerfile  about.html  background-remover.html  bigger-projects.html  data-finder.html  design.md  index.html  koi.js  nixpacks.toml  railway.toml  return-stream.html  script.js  shared.css  styles.css
DataFinderAgent/: .env.example  CLAUDE.md  DEVELOPMENT_PLAN.md  Dockerfile  api.py  pyproject.toml  railway.toml
DataFinderAgent/agent/: config.py  orchestrator.py  output.py  prompts.py  state.py  strategy.py
DataFinderAgent/agent/tools/: base.py  dynamic_scrape.py  general_scrape.py  pdf_extract.py  web_search.py
DataFinderAgent/cli/: main.py
DataFinderAgent/tests/: test_orchestrator.py  test_output.py  test_strategy.py
DataFinderAgent/tests/tools/: test_base.py  test_dynamic_scrape.py  test_general_scrape.py  test_pdf_extract.py  test_web_search.py
Sankey/: SampleData.csv  Tour de France Data.csv  sankey_chart_tool (15).html
WSR/: README.md  app.py  detailed_vectorizer.py  extreme_vectorizer.py  lambda_function.py  logo_upscaler.py  requirements.txt  test_vectorizer.py  vectorizer_engine.py  vtracer_engine.py
WSR/market/: admin.py  analyzer.py  models.py  routes.py  scheduler.py  scraper.py
WSR/meal/: admin.py  claude.py  models.py  routes.py  scheduler.py
WSR/static/: config.js  interactive.css  interactive.js  interactive_enhanced.js  script.js  style.css  test_interactive.js
WhiteBackgroundRemover/: index.html  script.js
sanity/: package-lock.json  package.json  sanity.cli.js  sanity.config.js
(+15 files in other folders)
